# alfred-string-toolkit

./: .gitignore  README.md  build.sh  case.py  hash.py  info.plist  info.py  lipsum.py  main.py  pyproject.toml  stringcase.py
scripts/: build.sh  release.sh
src/: base.py  cardano.py  case.py  hash.py  info.py  lipsum.py  main.py  utils.py
tests/: test_main.py
