[tool.poetry]
name = "String Toolkit"
version = "1.7.0"
description = "Apply different tools to strings"
documentation = "https://github.com/fedecalendino/alfred-string-toolkit/blob/main/README.md"
homepage = "https://github.com/fedecalendino/alfred-string-toolkit"
license = "MIT"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
alfred-pyflow = "latest"
lorem-text = "^2.1"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "latest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
